# olivaw-lidar

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
documentation/: 01-project-overview.md  02-architecture.md  03-protocol.md  04-development-process.md  05-testing-strategy.md  06-hardware-notes.md  07-future-work.md  README.md
examples/: basic_scan.rs  info.rs  record.rs  rerun_viz.rs
src/: device.rs  error.rs  lib.rs  types.rs
src/protocol/: command.rs  descriptor.rs  info.rs  mod.rs  scan_node.rs
src/transport/: mock.rs  mod.rs  replay.rs  serial.rs
tests/: protocol_tests.rs
